<resources>
    <string name="app_name">Perfection</string>
    <string name="start">Start</string>
    <string name="go">GO</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="back">back</string>
    <string name="clear">C</string>
    <string name="registered">Have fun =)</string>
    <string name="not_registered">Nick is already used =(</string>
    <string name="bad_password">Bad nickname…</string>
    <string name="Records">Records</string>
    <string name="Theme">Theme</string>
    <string name="Nickname">Nickname</string>
    <string name="Hello">HELLO</string>
    <string name="records_header">Top 10</string>
    <string name="MFG">MFG</string>
    <string name="calculate_sum">Calculate sum of digits</string>
    <string name="game_rules">Game rules</string>
    <string name="register">Register</string>
    <string name="saved_player_nick">Nick</string>
    <string name="saved_high_score">High_score</string>
    <string name="saved_last_score">Last_score</string>
    <string name="preference_file_key">PLAYER_DATA</string>
    <string name="saved_state_changed">State_changed</string>
    <string name="info_not_supported">Not supported yet=(</string>
    <string name="apply">Apply</string>
    <string name="themes">Theme</string>
    <string name="glb_theme_name">GreenLightBlue</string>
    <string name="pa_theme_name">PurpleAddict</string>
    <string name="saved_theme_id">theme_id</string>
    <string name="preference_theme_file_key">THEME_DATA</string>
</resources>
