<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anngabr.perfection.GameActivity">

    <Button
        android:id="@+id/clearBut"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/clear"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="85dp"
        android:layout_height="401dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/val_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBtn1"
            android:text="@string/_0"
            android:textSize="24sp" />

        <Button
            android:id="@+id/val_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary1"
            android:text="@string/_1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/val_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBtn1"
            android:text="@string/_2"
            android:textSize="24sp" />

        <Button
            android:id="@+id/val_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary1"
            android:text="@string/_3"
            android:textSize="24sp" />

        <Button
            android:id="@+id/val_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBtn1"
            android:text="@string/_4"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="85dp"
        android:layout_height="401dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/val_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBtn1"
            android:text="@string/_5"
            android:textSize="24sp" />

        <Button
            android:id="@+id/val_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary1"
            android:text="@string/_6"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/val_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBtn1"
            android:text="@string/_7"
            android:textSize="24sp" />

        <Button
            android:id="@+id/val_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary1"
            android:text="@string/_8"
            android:textSize="24sp" />

        <Button
            android:id="@+id/val_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBtn1"
            android:text="@string/_9"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <TextView
        android:id="@+id/digitsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="digits" />

    <Button
        android:id="@+id/backBut"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

    <TextView
        android:id="@+id/playerInputTextV"
        android:layout_width="134dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintLeft_toRightOf="@+id/backBut"
        app:layout_constraintRight_toLeftOf="@+id/scoreTextView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="input" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:gravity="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout2"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="score" />

</android.support.constraint.ConstraintLayout>
